# Meilisearch4TelegramSearchCKJ

./: .dockerignore  .env.example  .gitignore  ARCH_CRITIQUE.md  CLAUDE.md  Dockerfile  README.md  REFACTOR_CHECKLIST.md  docker-compose-windows.yml  docker-compose.yml  fast_mkdir.py  pyproject.toml  requirements.txt  setup.py
.claude/: index.json
.claude/plan/: phase3_api_layer.md  phase4_p0_implementation.md  phase4_p0_webui.md
.github/workflows/: docker-image.yml
Meilisearch4TelegramSearchCKJ/: requirements.txt
Meilisearch4TelegramSearchCKJ/src/: CLAUDE.md  app.py  config.ini  main.py
Meilisearch4TelegramSearchCKJ/src/config/: CLAUDE.md  config.py  env.py  env.py.example  settings.toml  settings.toml.example
Meilisearch4TelegramSearchCKJ/src/handlers/: basic_commands_handler.py  callback_query_dispatcher.py  config_handler.py  filter_handler.py  search_handler.py
Meilisearch4TelegramSearchCKJ/src/models/: CLAUDE.md  bot_handler.py  logger.py  meilisearch_handler.py  telegram_bot.py  telegram_client_handler.py
Meilisearch4TelegramSearchCKJ/src/session/: PutSessionFileHere.md
Meilisearch4TelegramSearchCKJ/src/utils/: CLAUDE.md  bridge.py  fmt_size.py  get_memory_usage.py  is_in_white_or_black_list.py  permissions.py  record_lastest_msg_id.py
Meilisearch4TelegramSearchCKJ/tests/: config.ini  conftest.py  fast_test.ipynb  get_session_file.py  get_str_session.py  test_configparser.py  test_log.py  test_logger.py  test_meilisearch.py  test_meilisearch_handler.py  test_tg_client.py  test_utils.py
docs/operations/: observability.md
docs/specs/: SPEC-P0-config-policy-service.md  SPEC-P0-config-store.md  SPEC-P0-dashboard-core.md  SPEC-P0-dialog-sync.md  SPEC-P0-logout-entry.md  SPEC-P0-runtime-control-service.md  SPEC-P0-search-service.md  SPEC-P0-service-layer-architecture.md  SPEC-P0-tailwind-v4-unification.md  SPEC-P0-toast-notification.md  SPEC-P0-webui-api-integration.md  SPEC-P1-ai-config.md  SPEC-P1-dark-light-toggle.md  SPEC-P1-docs-utils-cleanup.md  SPEC-P1-observability-service.md  SPEC-P1-page-transitions.md  SPEC-P1-skeleton-empty-states.md  SPEC-P1-storage.md  SPEC-P2-code-splitting.md  SPEC-P2-dashboard.md  SPEC-P2-search-enhancements.md  SPEC-P2-search-filters-theme.md  SPEC-P3-a11y.md  SPEC-P3-dead-code-cleanup.md  SPEC-P3-responsive-layout.md
docs/tasks/: TASK-bearer-only-auth.md
scripts/: generate_token.py  tg_client_demo.py
src/tg_search/: __init__.py  __main__.py  app.py  main.py
tests/: CLAUDE.md  TESTING_GUIDELINES.md  conftest.py  delete_all_contain_keyword.py  get_str_session.py  test_api.py  test_api_integration.py  test_config_store.py  test_configparser.py  test_dialog_sync.py  test_logger.py  test_meilisearch_handler.py  test_tg_client.py  test_utils.py
tests/helpers/: requirements.py
tests/integration/: config.py  conftest.py  env_manager.py  run.py  test_ai_config.py  test_api_e2e.py  test_config_store.py  test_config_store_e2e.py  test_dashboard_e2e.py  test_dialog_sync.py  test_dialog_sync_e2e.py  test_group_setup.py  test_observability_service_e2e.py  test_runtime_control_service_e2e.py  test_search_service_e2e.py  test_service_layer_architecture_e2e.py  test_storage.py
tests/unit/: conftest.py  test_api.py  test_auth_store.py  test_config_policy_service.py  test_config_route_error_mapping.py  test_configparser.py  test_control_route_error_mapping.py  test_dashboard.py  test_download_scheduler.py  test_logger.py  test_meilisearch.py  test_meilisearch_handler.py  test_observability_service.py  test_runtime_control_service.py  test_search_service.py  test_service_layer_import_lint.py  test_utils.py
webui-example/: .env.development.example  .env.example  App.tsx  CLAUDE.md  README.md  index.html  metadata.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts  walkthrough.md.resolved  webui_gap_analysis.md
webui-example/components/: BottomNav.tsx
webui-example/pages/: AIConfig.tsx  Dashboard.tsx  Login.tsx  Search.tsx  SelectChats.tsx  Settings.tsx  Storage.tsx  SyncedChats.tsx
webui-example/services/: geminiService.ts
webui-example/src/: App.tsx  index.css  main.tsx
(+112 files in other folders)
