[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meilisearch-tg-search"
version = "0.2.0"
description = "Telegram CJK message search powered by MeiliSearch"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "clionertr"}]

dependencies = [
    "telethon>=1.38.0",
    "meilisearch>=0.33.0",
    "coloredlogs>=15.0",
    "pytz>=2024.1",
    "tenacity>=8.2.0",
    "requests",
    # API 层依赖
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "anyio>=4.2.0",
    "websockets>=12.0",
    # AI 连通性测试（P1-AI-01）
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.2",
    "httpx>=0.26",
]

[project.scripts]
tg-search = "tg_search.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tg_search"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
# Use a shared event loop for async tests to avoid expensive loop teardown
# and potential hangs when fixtures/resources span multiple tests.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E722",  # bare except
    "F401",  # unused import (in __init__.py)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.coverage.run]
source = ["src/tg_search"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
